--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,25 +1,29 @@
-#main-head {
-  color: wheat;
-}
-#my-name {
-  color: wheat;
+.banner-img {
+  height: 100%;
+  width: 100%;
 }
 
-body {
-  padding-top: 80px;
+#welcome-banner {
 }
-@media (max-width: 979px) {
+
+/* 980px is the max before change for landscape phone. But Why? */
+
+@media (max-width: 980px) {
   body {
     padding-top: 0px;
+  }
+  .banner-img {
+    position: static;
   }
 }
 
 #logo {
   margin-right: 10px;
-  font-size: 3.0em;
+  font-size: 2.0em;
   color: #fff;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding-top: 7px;
+  padding-top: 5px;
   font-weight: bold;
 }
+
