--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -3,19 +3,39 @@
   width: 100%;
 }
 
-#welcome-banner {
+.mobile-nav {
+  display: none;
+}
+
+.bolded {
+  font-weight: bold;
+  color: #619dd0;
+}
+
+.bolded:hover {
+  color: #619dd0;
+}
+
+.nonderline:hover {
+  text-decoration: none;
 }
 
 /* 980px is the max before change for landscape phone. But Why? */
-
-@media (max-width: 980px) {
-  body {
-    padding-top: 0px;
-  }
+@media (max-width: 1200px) {
   .banner-img {
     position: static;
   }
+  .nav-list {
+    display: none;
+  }
+  .mobile-nav {
+    display: block;
+  }
+  div#positioned {
+    position: relative;
+  }
 }
+
 
 #logo {
   margin-right: 10px;
@@ -27,3 +47,33 @@
   font-weight: bold;
 }
 
+/* nav bar link build */
+.nav-link {
+  font-weight: bold;
+  vertical-align: middle;
+  line-height: 49px;
+  border-left: solid;
+  border-width: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+  color: #619dd0;
+  height: 49px;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+.nav-link:hover {
+  background-color: #f2f2f2;
+  color: #337ab7;
+  border-color: #619dd0;
+  border-left: solid;
+  border-width: 1px;
+  text-decoration: none;
+}
+
+.nav-link:active {
+  background-color: #cccccc;
+  border-style: solid;
+  border-color: #337ab7;
+  border-width: 2px;
+}
